[gd_scene load_steps=2 format=3 uid="uid://cpykr0eqqx0dx"]

[ext_resource type="Script" uid="uid://bqin3jonfqjjv" path="res://script/UpgradePanel.gd" id="1_pxrjq"]

[node name="UpgradePanel" type="CanvasLayer"]
layer = 10
script = ExtResource("1_pxrjq")

[node name="Panel" type="Panel" parent="."]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Option1" type="Button" parent="Panel/MarginContainer/VBoxContainer/Label"]
layout_mode = 0
offset_left = 19.0
offset_top = 55.0
offset_right = 72.0
offset_bottom = 86.0
text = "Skill 1"

[node name="Option2" type="Button" parent="Panel/MarginContainer/VBoxContainer/Label"]
layout_mode = 0
offset_left = 22.0
offset_top = 123.0
offset_right = 75.0
offset_bottom = 154.0
text = "Skill 2"

[node name="Option3" type="Button" parent="Panel/MarginContainer/VBoxContainer/Label"]
layout_mode = 0
offset_left = 23.0
offset_top = 191.0
offset_right = 76.0
offset_bottom = 222.0
text = "Skill 3"

[node name="Close" type="Button" parent="Panel/MarginContainer/VBoxContainer/Label"]
layout_mode = 0
offset_left = 157.0
offset_top = 243.0
offset_right = 207.0
offset_bottom = 274.0
text = "Close"
